@@ -77,6 +77,10 @@ UPDATETASKSCFG=@oxgroupwaresysconfdir@/updatetasks.cfg
 
 CalendarSQL=com.openexchange.groupware.calendar.CalendarMySQL
 
+# Location of the HTMLEntities.properties configuration file. This file
+# contains the most HTML entities and maps them to their character value
+HTMLEntities=@oxgroupwaresysconfdir@/HTMLEntities.properties
+
 # ERROR=1, WARN=3, INFO=5 (DEFAULT), DEBUG=10
 LOGLEVEL:5
 
